--- a/index.html
+++ b/index.html
@@ -33,15 +33,44 @@
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
     <h2>Course Introduction</h2>
-    <p>[Brief description of the course or program related to the team or project].</p>
-    
-    <h3>Data Structures and Algorithms Studied So Far:</h3>
+  <p>
+        The "Design and Analysis of Algorithms" course emphasizes understanding, designing, and evaluating algorithms to solve computational problems effectively. It delves into topics such as recursion, graph algorithms, sorting and searching, and advanced data structures like trees and heaps. Students gain skills in analyzing algorithm efficiency in terms of time and space complexity, applying these methods to real-world problems, and building a strong foundation for tackling advanced computing challenges.
+    </p>
+</section>
+
+<section id="data-structures-algorithms">
+    <h2>What kind of data structures and algorithms have you studied?</h2>
+
+    <h3>Data Structures:</h3>
     <ul>
-        <li><strong>[Data Structure 1]:</strong> [Short description of its application].</li>
-        <li><strong>[Data Structure 2]:</strong> [Short description of its application].</li>
-        <li><strong>[Data Structure 3]:</strong> [Short description of its application].</li>
-        <li><strong>[Data Structure 4]:</strong> [Short description of its application].</li>
+        <li><strong>Basic Structures:</strong> Arrays, Stacks, Queues, Linked Lists</li>
+        <li><strong>Intermediate Structures:</strong> Trees, Graphs, Heaps</li>
+        <li><strong>Advanced Structures:</strong> Tries, Fenwick Trees, Segment Trees, Skip Lists</li>
     </ul>
+
+    <h3>Algorithms:</h3>
+    <ul>
+        <li><strong>Sorting and Searching:</strong> Organizing data with Bubble Sort, Quick Sort, Merge Sort, and searching with Binary Search, KMP Algorithm</li>
+        <li><strong>Graph Algorithms:</strong> Shortest path algorithms (Dijkstra’s, Bellman-Ford) and Minimum Spanning Trees (Prim’s, Kruskal’s)</li>
+        <li><strong>Pathfinding:</strong> Algorithms for route determination, such as Floyd-Warshall</li>
+<li><strong>Optimization Problems:</strong> Solutions for Knapsack, Travelling Salesperson Problem, and Huffman Coding</li>
+        <li><strong>Recursion and Backtracking:</strong> Function-based problem-solving (e.g., N-Queens Problem)</li>
+        <li><strong>String Matching:</strong> Pattern searching with Rabin-Karp, Boyer-Moore, and Brute Force algorithms</li>
+        <li><strong>Divide and Conquer:</strong> Techniques like Merge Sort and Strassen’s Matrix Multiplication</li>
+        <li><strong>Dynamic Programming:</strong> Breaking problems into overlapping subproblems (e.g., Fibonacci, Longest Common Subsequence)</li>
+        <li><strong>Undecidability:</strong> Exploring problems with no algorithmic solutions (e.g., Halting Problem)</li>
+    </ul>
+</section>
+
+<section id="real-time-applications">
+    <h2>How do you connect the course with real-time applications?</h2>
+    <ul>
+        <li><strong>Graph Algorithms:</strong> Employ Dijkstra's or Kruskal's algorithms to optimize routes in transportation networks or telecommunication systems.</li>
+        <li><strong>Sorting and Searching:</strong> Use efficient algorithms for inventory management and fast product searches in e-commerce platforms.</li>
+        <li><strong>Data Structures:</strong> Utilize heaps, trees, and hash tables for database indexing and real-time data retrieval systems like caching.</li>
+        <li><strong>Optimization Problems:</strong> Address real-world scenarios, such as resource allocation in project management, using the Knapsack problem.</li>
+    </ul>
+
 </section>
 
 <!-- Business Ideas Section -->
