--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         <li><strong>Optimization Problems:</strong> Address real-world scenarios, such as resource allocation in project management, using the Knapsack problem.</li>
     </ul>
 
-    <h2>Business Ideas</h2>
+   <section id="business-ideas" style="display:none;">
+ <h2>Business Ideas</h2>
     <table>
          <thead>
         <tr>
