--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 [City Name] | Designed by RIA JAVALAGI</p>
+    <p>&copy; 2024 VAYUJIVA | Designed by RIA JAVALAGI</p>
 </footer>
 
 </body>
