--- a/index.html
+++ b/index.html
@@ -68,61 +68,63 @@
 </section>
    <section id="business-ideas" style="display:none;">
  <h2>Business Ideas</h2>
-    <table>
-         <thead>
+  <h2>Business Ideas</h2>
+<table>
+    <thead>
         <tr>
-            <th>SL NO</th>
-            <th>Business Case Identified</th>
-            <th>Description</th>
-            <th>Owner</th>
-            <th>Problem Tools</th>
+            <th><strong>SL NO</strong></th>
+            <th><strong>Business Case Identified</strong></th>
+            <th><strong>Description</strong></th>
+            <th><strong>Owner</strong></th>
+            <th><strong>Problem Tools</strong></th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>1</td>
-            <td>Real-time Traffic Monitoring</td>
+        <tr class="clickable-row">
+            <td><strong>1</strong></td>
+            <td><strong>Real-time Traffic Monitoring</strong></td>
             <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
             <td>Ananya B P</td>
             <td>Arrays, Hashing, Sparse Table</td>
         </tr>
-        <tr>
-            <td>2</td>
-            <td>Citizen Feedback Processing</td>
+        <tr class="clickable-row">
+            <td><strong>2</strong></td>
+            <td><strong>Citizen Feedback Processing</strong></td>
             <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
             <td>Ria</td>
             <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
         </tr>
-        <tr>
- <td>3</td>
-            <td>Smart Traffic Signal Control</td>
+        <tr class="clickable-row">
+            <td><strong>3</strong></td>
+            <td><strong>Smart Traffic Signal Control</strong></td>
             <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
             <td>Sanjana</td>
             <td>Binary Search Tree, Trie, Queue</td>
         </tr>
-        <tr>
-            <td>4</td>
-            <td>Smart Parking Systems</td>
+        <tr class="clickable-row">
+            <td><strong>4</strong></td>
+            <td><strong>Smart Parking Systems</strong></td>
             <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
             <td>Chinmayi KB</td>
             <td>Trie, Tree, BFS, DFS, Queue</td>
         </tr>
-        <tr>
-            <td>5</td>
-            <td>Emergency Vehicle Routing</td>
+        <tr class="clickable-row">
+            <td><strong>5</strong></td>
+            <td><strong>Emergency Vehicle Routing</strong></td>
             <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
             <td>Ria and Sanjana</td>
             <td>2-3 Tree, Dijkstra's Algorithm</td>
         </tr>
-        <tr>
-            <td>6</td>
-            <td>EV Charging Station Management</td>
+        <tr class="clickable-row">
+            <td><strong>6</strong></td>
+            <td><strong>EV Charging Station Management</strong></td>
             <td>Locate and manage EV charging stations in the city.</td>
             <td>Ananya and Chinmayi</td>
             <td>Binary Search Tree, Trie, Arrays</td>
-   </tr>
+        </tr>
     </tbody>
 </table>
+
 </section>
 
 <!-- Education Details Section -->
