--- a/index.html
+++ b/index.html
@@ -81,46 +81,52 @@
     </thead>
     <tbody>
         <tr class="clickable-row">
+       <br><button class="button" onclick="toggleInfo('Ananya B P')">
             <td><strong>1</strong></td>
             <td><strong>Real-time Traffic Monitoring</strong></td>
             <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
             <td>Ananya B P</td>
-            <td>Arrays, Hashing, Sparse Table</td>
+            <td>Arrays, Hashing, Sparse Table</td> </button>
         </tr>
         <tr class="clickable-row">
+             <br><button class="button" onclick="toggleInfo('Ananya B P')">
             <td><strong>2</strong></td>
             <td><strong>Citizen Feedback Processing</strong></td>
             <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
             <td>Ria</td>
-            <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
+            <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td> </button>
         </tr>
         <tr class="clickable-row">
+             <br><button class="button" onclick="toggleInfo('Ananya B P')">
             <td><strong>3</strong></td>
             <td><strong>Smart Traffic Signal Control</strong></td>
             <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
             <td>Sanjana</td>
-            <td>Binary Search Tree, Trie, Queue</td>
+            <td>Binary Search Tree, Trie, Queue</td> </button>
         </tr>
         <tr class="clickable-row">
+             <br><button class="button" onclick="toggleInfo('Ananya B P')">
             <td><strong>4</strong></td>
             <td><strong>Smart Parking Systems</strong></td>
             <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
             <td>Chinmayi KB</td>
-            <td>Trie, Tree, BFS, DFS, Queue</td>
+            <td>Trie, Tree, BFS, DFS, Queue</td> </button>
         </tr>
         <tr class="clickable-row">
+             <br><button class="button" onclick="toggleInfo('Ananya B P')">
             <td><strong>5</strong></td>
             <td><strong>Emergency Vehicle Routing</strong></td>
             <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
             <td>Ria and Sanjana</td>
-            <td>2-3 Tree, Dijkstra's Algorithm</td>
+            <td>2-3 Tree, Dijkstra's Algorithm</td> </button>
         </tr>
         <tr class="clickable-row">
             <td><strong>6</strong></td>
+             <br><button class="button" onclick="toggleInfo('Ananya B P')">
             <td><strong>EV Charging Station Management</strong></td>
             <td>Locate and manage EV charging stations in the city.</td>
             <td>Ananya and Chinmayi</td>
-            <td>Binary Search Tree, Trie, Arrays</td>
+            <td>Binary Search Tree, Trie, Arrays</td> </button>
         </tr>
     </tbody>
 </table>
