--- a/index.html
+++ b/index.html
@@ -66,74 +66,128 @@
         <li><strong>Optimization Problems:</strong> Address real-world scenarios, such as resource allocation in project management, using the Knapsack problem.</li>
     </ul>
 </section>
-   <section id="business-ideas" style="display:none;">
- <h2>Business Ideas</h2>
-  <h2>Business Ideas</h2>
-<table>
-    <thead>
-        <tr>
-            <th><strong>SL NO</strong></th>
-            <th><strong>Business Case Identified</strong></th>
-            <th><strong>Description</strong></th>
-            <th><strong>Owner</strong></th>
-            <th><strong>Problem Tools</strong></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="clickable-row">
-       <br><button class="button" onclick="toggleInfo('Ananya B P')">
-            <td><strong>1</strong></td>
-            <td><strong>Real-time Traffic Monitoring</strong></td>
-            <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
-            <td>Ananya B P</td>
-            <td>Arrays, Hashing, Sparse Table</td> </button>
-        </tr>
-        <tr class="clickable-row">
-             <br><button class="button" onclick="toggleInfo('Ananya B P')">
-            <td><strong>2</strong></td>
-            <td><strong>Citizen Feedback Processing</strong></td>
-            <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
-            <td>Ria</td>
-            <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td> </button>
-        </tr>
-        <tr class="clickable-row">
-             <br><button class="button" onclick="toggleInfo('Ananya B P')">
-            <td><strong>3</strong></td>
-            <td><strong>Smart Traffic Signal Control</strong></td>
-            <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
-            <td>Sanjana</td>
-            <td>Binary Search Tree, Trie, Queue</td> </button>
-        </tr>
-        <tr class="clickable-row">
-             <br><button class="button" onclick="toggleInfo('Ananya B P')">
-            <td><strong>4</strong></td>
-            <td><strong>Smart Parking Systems</strong></td>
-            <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
-            <td>Chinmayi KB</td>
-            <td>Trie, Tree, BFS, DFS, Queue</td> </button>
-        </tr>
-        <tr class="clickable-row">
-             <br><button class="button" onclick="toggleInfo('Ananya B P')">
-            <td><strong>5</strong></td>
-            <td><strong>Emergency Vehicle Routing</strong></td>
-            <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
-            <td>Ria and Sanjana</td>
-            <td>2-3 Tree, Dijkstra's Algorithm</td> </button>
-        </tr>
-        <tr class="clickable-row">
-            <td><strong>6</strong></td>
-             <br><button class="button" onclick="toggleInfo('Ananya B P')">
-            <td><strong>EV Charging Station Management</strong></td>
-            <td>Locate and manage EV charging stations in the city.</td>
-            <td>Ananya and Chinmayi</td>
-            <td>Binary Search Tree, Trie, Arrays</td> </button>
-        </tr>
-    </tbody>
-</table>
-
+<section id="business-ideas">
+    <h2>Business Ideas</h2>
+    <table>
+        <thead>
+            <tr>
+                <th><strong>SL NO</strong></th>
+                <th><strong>Business Case Identified</strong></th>
+                <th><strong>Description</strong></th>
+                <th><strong>Owner</strong></th>
+                <th><strong>Problem Tools</strong></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="clickable-row">
+                <a href="#AnanyaB" style="text-decoration: none;">
+                    <td><strong>1</strong></td>
+                    <td><strong>Real-time Traffic Monitoring</strong></td>
+                    <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
+                    <td>Ananya B P</td>
+                    <td>Arrays, Hashing, Sparse Table</td>
+                </a>
+            </tr>
+            <tr class="clickable-row">
+                <a href="#Ria" style="text-decoration: none;">
+                    <td><strong>2</strong></td>
+                    <td><strong>Citizen Feedback Processing</strong></td>
+                    <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
+                    <td>Ria</td>
+                    <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
+                </a>
+            </tr>
+            <tr class="clickable-row">
+                <a href="#Sanjana" style="text-decoration: none;">
+                    <td><strong>3</strong></td>
+                    <td><strong>Smart Traffic Signal Control</strong></td>
+                    <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
+                    <td>Sanjana</td>
+                    <td>Binary Search Tree, Trie, Queue</td>
+                </a>
+            </tr>
+            <tr class="clickable-row">
+                <a href="#Chinmayi" style="text-decoration: none;">
+                    <td><strong>4</strong></td>
+                    <td><strong>Smart Parking Systems</strong></td>
+                    <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
+                    <td>Chinmayi KB</td>
+                    <td>Trie, Tree, BFS, DFS, Queue</td>
+                </a>
+            </tr>
+            <tr class="clickable-row">
+                <a href="#RiaAndSanjana" style="text-decoration: none;">
+                    <td><strong>5</strong></td>
+                    <td><strong>Emergency Vehicle Routing</strong></td>
+                    <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
+                    <td>Ria and Sanjana</td>
+                    <td>2-3 Tree, Dijkstra's Algorithm</td>
+                </a>
+            </tr>
+            <tr class="clickable-row">
+                <a href="#AnanyaAndChinmayi" style="text-decoration: none;">
+                    <td><strong>6</strong></td>
+                    <td><strong>EV Charging Station Management</strong></td>
+                    <td>Locate and manage EV charging stations in the city.</td>
+                    <td>Ananya and Chinmayi</td>
+                    <td>Binary Search Tree, Trie, Arrays</td>
+                </a>
+            </tr>
+        </tbody>
+    </table>
 </section>
 
-<!-- Education Details Section -->
+<!-- Sections below for each business case -->
+<section id="AnanyaB" class="info-section" style="display:none;">
+    <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
+    <ul>
+        <li><strong>xyz</strong></li>
+    </ul>
+</section>
+
+<section id="Ria" class="info-section" style="display:none;">
+    <h2>INDUSTRIAL STRATEGIES for Ria</h2>
+    <ul>
+        <li><strong>SDG Target 9.1</strong><br>Focus: Develop quality, reliable, sustainable, and resilient infrastructure...</li>
+        <li><strong>SDG Target 11.3</strong><br>Focus: Enhance inclusive and sustainable urbanization...</li>
+        <li><strong>SDG Target 16.6</strong><br>Focus: Develop effective, accountable, and transparent institutions...</li>
+    </ul>
+</section>
+
+<section id="Sanjana" class="info-section" style="display:none;">
+    <h2>INDUSTRIAL STRATEGIES for Sanjana</h2>
+    <ul>
+        <li><strong>SDG Target 11.2</strong><br>Focus: Provide access to safe, affordable, accessible transport...</li>
+        <li><strong>SDG Target 9.4</strong><br>Focus: Upgrade infrastructure to make them sustainable...</li>
+        <li><strong>SDG Target 13.2</strong><br>Focus: Integrate climate change measures into national policies...</li>
+    </ul>
+</section>
+
+<section id="Chinmayi" class="info-section" style="display:none;">
+    <h2>INDUSTRIAL STRATEGIES for Chinmayi</h2>
+    <ul>
+        <li><strong>abcd</strong></li>
+    </ul>
+</section>
+
+<section id="RiaAndSanjana" class="info-section" style="display:none;">
+    <h2>INDUSTRIAL STRATEGIES for Ria and Sanjana</h2>
+    <ul>
+        <li><strong>SDG Target 11.2</strong><br>Focus: Provide access to safe, affordable transport systems...</li>
+        <li><strong>SDG Target 3.6</strong><br>Focus: Halve the number of global deaths from road accidents...</li>
+        <li><strong>SDG Target 9.1</strong><br>Focus: Develop quality, reliable infrastructure...</li>
+    </ul>
+</section>
+
+<section id="AnanyaAndChinmayi" class="info-section" style="display:none;">
+    <h2>INDUSTRIAL STRATEGIES for Ananya and Chinmayi</h2>
+    <ul>
+        <li><strong>mmmm</strong></li>
+    </ul>
+</section>
+
+
+    <!-- Education Details Section -->
 <section id="education-details">
     <h2>Education Details</h2>
     <dl>
