--- a/index.html
+++ b/index.html
@@ -79,65 +79,53 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="clickable-row">
-                <a href="#AnanyaB" style="text-decoration: none;">
-                    <td><strong>1</strong></td>
-                    <td><strong>Real-time Traffic Monitoring</strong></td>
-                    <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
-                    <td>Ananya B P</td>
-                    <td>Arrays, Hashing, Sparse Table</td>
-                </a>
+            <tr>
+                <td><strong>1</strong></td>
+                <td><strong><a href="#AnanyaB">Real-time Traffic Monitoring</a></strong></td>
+                <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
+                <td>Ananya B P</td>
+                <td>Arrays, Hashing, Sparse Table</td>
             </tr>
-            <tr class="clickable-row">
-                <a href="#Ria" style="text-decoration: none;">
-                    <td><strong>2</strong></td>
-                    <td><strong>Citizen Feedback Processing</strong></td>
-                    <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
-                    <td>Ria</td>
-                    <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
-                </a>
+            <tr>
+                <td><strong>2</strong></td>
+                <td><strong><a href="#Ria">Citizen Feedback Processing</a></strong></td>
+                <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
+                <td>Ria</td>
+                <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
             </tr>
-            <tr class="clickable-row">
-                <a href="#Sanjana" style="text-decoration: none;">
-                    <td><strong>3</strong></td>
-                    <td><strong>Smart Traffic Signal Control</strong></td>
-                    <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
-                    <td>Sanjana</td>
-                    <td>Binary Search Tree, Trie, Queue</td>
-                </a>
+            <tr>
+                <td><strong>3</strong></td>
+                <td><strong><a href="#Sanjana">Smart Traffic Signal Control</a></strong></td>
+                <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
+                <td>Sanjana</td>
+                <td>Binary Search Tree, Trie, Queue</td>
             </tr>
-            <tr class="clickable-row">
-                <a href="#Chinmayi" style="text-decoration: none;">
-                    <td><strong>4</strong></td>
-                    <td><strong>Smart Parking Systems</strong></td>
-                    <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
-                    <td>Chinmayi KB</td>
-                    <td>Trie, Tree, BFS, DFS, Queue</td>
-                </a>
+            <tr>
+                <td><strong>4</strong></td>
+                <td><strong><a href="#Chinmayi">Smart Parking Systems</a></strong></td>
+                <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
+                <td>Chinmayi KB</td>
+                <td>Trie, Tree, BFS, DFS, Queue</td>
             </tr>
-            <tr class="clickable-row">
-                <a href="#RiaAndSanjana" style="text-decoration: none;">
-                    <td><strong>5</strong></td>
-                    <td><strong>Emergency Vehicle Routing</strong></td>
-                    <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
-                    <td>Ria and Sanjana</td>
-                    <td>2-3 Tree, Dijkstra's Algorithm</td>
-                </a>
+            <tr>
+                <td><strong>5</strong></td>
+                <td><strong><a href="#RiaAndSanjana">Emergency Vehicle Routing</a></strong></td>
+                <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
+                <td>Ria and Sanjana</td>
+                <td>2-3 Tree, Dijkstra's Algorithm</td>
             </tr>
-            <tr class="clickable-row">
-                <a href="#AnanyaAndChinmayi" style="text-decoration: none;">
-                    <td><strong>6</strong></td>
-                    <td><strong>EV Charging Station Management</strong></td>
-                    <td>Locate and manage EV charging stations in the city.</td>
-                    <td>Ananya and Chinmayi</td>
-                    <td>Binary Search Tree, Trie, Arrays</td>
-                </a>
+            <tr>
+                <td><strong>6</strong></td>
+                <td><strong><a href="#AnanyaAndChinmayi">EV Charging Station Management</a></strong></td>
+                <td>Locate and manage EV charging stations in the city.</td>
+                <td>Ananya and Chinmayi</td>
+                <td>Binary Search Tree, Trie, Arrays</td>
             </tr>
         </tbody>
     </table>
+</section>
 
-
-<!-- Sections below for each business case -->
+<!-- Industrial Strategy Sections -->
 <section id="AnanyaB" class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
     <ul>
@@ -185,7 +173,7 @@
         <li><strong>mmmm</strong></li>
     </ul>
 </section>
-</section>
+
     <!-- Education Details Section -->
 <section id="education-details">
     <h2>Education Details</h2>
