--- a/index.html
+++ b/index.html
@@ -81,42 +81,42 @@
         <tbody>
             <tr>
                 <td><strong>1</strong></td>
-                <td><strong><a href="#AnanyaB">Real-time Traffic Monitoring</a></strong></td>
+                <td><strong><label for="AnanyaB">Real-time Traffic Monitoring</label></strong></td>
                 <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
                 <td>Ananya B P</td>
                 <td>Arrays, Hashing, Sparse Table</td>
             </tr>
             <tr>
                 <td><strong>2</strong></td>
-                <td><strong><a href="#Ria">Citizen Feedback Processing</a></strong></td>
+                <td><strong><label for="Ria">Citizen Feedback Processing</label></strong></td>
                 <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
                 <td>Ria</td>
                 <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
             </tr>
             <tr>
                 <td><strong>3</strong></td>
-                <td><strong><a href="#Sanjana">Smart Traffic Signal Control</a></strong></td>
+                <td><strong><label for="Sanjana">Smart Traffic Signal Control</label></strong></td>
                 <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
                 <td>Sanjana</td>
                 <td>Binary Search Tree, Trie, Queue</td>
             </tr>
             <tr>
                 <td><strong>4</strong></td>
-                <td><strong><a href="#Chinmayi">Smart Parking Systems</a></strong></td>
+                <td><strong><label for="Chinmayi">Smart Parking Systems</label></strong></td>
                 <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
                 <td>Chinmayi KB</td>
                 <td>Trie, Tree, BFS, DFS, Queue</td>
             </tr>
             <tr>
                 <td><strong>5</strong></td>
-                <td><strong><a href="#RiaAndSanjana">Emergency Vehicle Routing</a></strong></td>
+                <td><strong><label for="RiaAndSanjana">Emergency Vehicle Routing</label></strong></td>
                 <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
                 <td>Ria and Sanjana</td>
                 <td>2-3 Tree, Dijkstra's Algorithm</td>
             </tr>
             <tr>
                 <td><strong>6</strong></td>
-                <td><strong><a href="#AnanyaAndChinmayi">EV Charging Station Management</a></strong></td>
+                <td><strong><label for="AnanyaAndChinmayi">EV Charging Station Management</label></strong></td>
                 <td>Locate and manage EV charging stations in the city.</td>
                 <td>Ananya and Chinmayi</td>
                 <td>Binary Search Tree, Trie, Arrays</td>
@@ -126,14 +126,16 @@
 </section>
 
 <!-- Industrial Strategy Sections -->
-<section id="AnanyaB" class="info-section">
+<input type="checkbox" id="AnanyaB" class="toggle-section" hidden>
+<section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
     <ul>
         <li><strong>xyz</strong></li>
     </ul>
 </section>
 
-<section id="Ria" class="info-section">
+<input type="checkbox" id="Ria" class="toggle-section" hidden>
+<section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ria</h2>
     <ul>
         <li><strong>SDG Target 9.1</strong><br>Focus: Develop quality, reliable, sustainable, and resilient infrastructure...</li>
@@ -142,7 +144,8 @@
     </ul>
 </section>
 
-<section id="Sanjana" class="info-section">
+<input type="checkbox" id="Sanjana" class="toggle-section" hidden>
+<section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Sanjana</h2>
     <ul>
         <li><strong>SDG Target 11.2</strong><br>Focus: Provide access to safe, affordable, accessible transport...</li>
@@ -151,14 +154,16 @@
     </ul>
 </section>
 
-<section id="Chinmayi" class="info-section">
+<input type="checkbox" id="Chinmayi" class="toggle-section" hidden>
+<section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Chinmayi</h2>
     <ul>
         <li><strong>abcd</strong></li>
     </ul>
 </section>
 
-<section id="RiaAndSanjana" class="info-section">
+<input type="checkbox" id="RiaAndSanjana" class="toggle-section" hidden>
+<section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ria and Sanjana</h2>
     <ul>
         <li><strong>SDG Target 11.2</strong><br>Focus: Provide access to safe, affordable transport systems...</li>
@@ -167,12 +172,14 @@
     </ul>
 </section>
 
-<section id="AnanyaAndChinmayi" class="info-section">
+<input type="checkbox" id="AnanyaAndChinmayi" class="toggle-section" hidden>
+<section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya and Chinmayi</h2>
     <ul>
         <li><strong>mmmm</strong></li>
     </ul>
 </section>
+
 
     <!-- Education Details Section -->
 <section id="education-details">
