--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         <li><strong>Data Structures:</strong> Utilize heaps, trees, and hash tables for database indexing and real-time data retrieval systems like caching.</li>
         <li><strong>Optimization Problems:</strong> Address real-world scenarios, such as resource allocation in project management, using the Knapsack problem.</li>
     </ul>
-</section>
 <section id="business-ideas">
     <h2>Business Ideas</h2>
     <table>
@@ -81,42 +80,42 @@
         <tbody>
             <tr>
                 <td><strong>1</strong></td>
-                <td><strong><label for="AnanyaB">Real-time Traffic Monitoring</label></strong></td>
+                <td><strong><label for="AnanyaB" class="clickable-row">Real-time Traffic Monitoring</label></strong></td>
                 <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
                 <td>Ananya B P</td>
                 <td>Arrays, Hashing, Sparse Table</td>
             </tr>
             <tr>
                 <td><strong>2</strong></td>
-                <td><strong><label for="Ria">Citizen Feedback Processing</label></strong></td>
+                <td><strong><label for="Ria" class="clickable-row">Citizen Feedback Processing</label></strong></td>
                 <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
                 <td>Ria</td>
                 <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
             </tr>
             <tr>
                 <td><strong>3</strong></td>
-                <td><strong><label for="Sanjana">Smart Traffic Signal Control</label></strong></td>
+                <td><strong><label for="Sanjana" class="clickable-row">Smart Traffic Signal Control</label></strong></td>
                 <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
                 <td>Sanjana</td>
                 <td>Binary Search Tree, Trie, Queue</td>
             </tr>
             <tr>
                 <td><strong>4</strong></td>
-                <td><strong><label for="Chinmayi">Smart Parking Systems</label></strong></td>
+                <td><strong><label for="Chinmayi" class="clickable-row">Smart Parking Systems</label></strong></td>
                 <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
                 <td>Chinmayi KB</td>
                 <td>Trie, Tree, BFS, DFS, Queue</td>
             </tr>
             <tr>
                 <td><strong>5</strong></td>
-                <td><strong><label for="RiaAndSanjana">Emergency Vehicle Routing</label></strong></td>
+                <td><strong><label for="RiaAndSanjana" class="clickable-row">Emergency Vehicle Routing</label></strong></td>
                 <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
                 <td>Ria and Sanjana</td>
                 <td>2-3 Tree, Dijkstra's Algorithm</td>
             </tr>
             <tr>
                 <td><strong>6</strong></td>
-                <td><strong><label for="AnanyaAndChinmayi">EV Charging Station Management</label></strong></td>
+                <td><strong><label for="AnanyaAndChinmayi" class="clickable-row">EV Charging Station Management</label></strong></td>
                 <td>Locate and manage EV charging stations in the city.</td>
                 <td>Ananya and Chinmayi</td>
                 <td>Binary Search Tree, Trie, Arrays</td>
@@ -179,7 +178,6 @@
         <li><strong>mmmm</strong></li>
     </ul>
 </section>
-
 
     <!-- Education Details Section -->
 <section id="education-details">
