--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </tbody>
     </table>
 </section>
-
+</section>
 <!-- Industrial Strategy Sections -->
 <input type="checkbox" id="AnanyaB" class="toggle-section" hidden>
 <section class="info-section">
