--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
     <ul>
-        <li><strong>xyz</strong></li>
+        <li><strong>a. Goal (SDG_GOAL):* Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable. </li> 
+ <li><strong>b. Target (SDG_TARGET):* Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
+ <li><strong>c. Indicator (SDG_INDICATOR):* Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</strong></li>
     </ul>
 </section>
 
@@ -175,7 +177,9 @@
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya and Chinmayi</h2>
     <ul>
-        <li><strong>mmmm</strong></li>
+        <li><strong>a. Goal (SDG_GOAL):* Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable. </li> 
+ <li><strong>b. Target (SDG_TARGET):* Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
+ <li><strong>c. Indicator (SDG_INDICATOR):* Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</strong></li>
     </ul>
 </section>
 
