--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <li><strong>Data Structures:</strong> Utilize heaps, trees, and hash tables for database indexing and real-time data retrieval systems like caching.</li>
         <li><strong>Optimization Problems:</strong> Address real-world scenarios, such as resource allocation in project management, using the Knapsack problem.</li>
     </ul>
+</section>
 <section id="business-ideas">
     <h2>Business Ideas</h2>
     <table>
