--- a/index.html
+++ b/index.html
@@ -67,71 +67,71 @@
     </ul>
 </section>
 <section id="business-ideas">
-    <h2>Business Ideas</h2>
-    <table>
-        <thead>
-            <tr>
-                <th><strong>SL NO</strong></th>
-                <th><strong>Business Case Identified</strong></th>
-                <th><strong>Description</strong></th>
-                <th><strong>Owner</strong></th>
-                <th><strong>Problem Tools</strong></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><strong>1</strong></td>
-                <td><strong><label for="AnanyaB" class="clickable-row">Real-time Traffic Monitoring</label></strong></td>
-                <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
-                <td>Ananya B P</td>
-                <td>Arrays, Hashing, Sparse Table</td>
-            </tr>
-            <tr>
-                <td><strong>2</strong></td>
-                <td><strong><label for="Ria" class="clickable-row">Citizen Feedback Processing</label></strong></td>
-                <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
-                <td>Ria</td>
-                <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
-            </tr>
-            <tr>
-                <td><strong>3</strong></td>
-                <td><strong><label for="Sanjana" class="clickable-row">Smart Traffic Signal Control</label></strong></td>
-                <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
-                <td>Sanjana</td>
-                <td>Binary Search Tree, Trie, Queue</td>
-            </tr>
-            <tr>
-                <td><strong>4</strong></td>
-                <td><strong><label for="Chinmayi" class="clickable-row">Smart Parking Systems</label></strong></td>
-                <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
-                <td>Chinmayi KB</td>
-                <td>Trie, Tree, BFS, DFS, Queue</td>
-            </tr>
-            <tr>
-                <td><strong>5</strong></td>
-                <td><strong><label for="RiaAndSanjana" class="clickable-row">Emergency Vehicle Routing</label></strong></td>
-                <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
-                <td>Ria and Sanjana</td>
-                <td>2-3 Tree, Dijkstra's Algorithm</td>
-            </tr>
-            <tr>
-                <td><strong>6</strong></td>
-                <td><strong><label for="AnanyaAndChinmayi" class="clickable-row">EV Charging Station Management</label></strong></td>
-                <td>Locate and manage EV charging stations in the city.</td>
-                <td>Ananya and Chinmayi</td>
-                <td>Binary Search Tree, Trie, Arrays</td>
-            </tr>
-        </tbody>
-    </table>
+   <h2>Business Ideas</h2>
+<table>
+    <thead>
+        <tr>
+            <th><strong>SL NO</strong></th>
+            <th><strong>Business Case Identified</strong></th>
+            <th><strong>Description</strong></th>
+            <th><strong>Owner</strong></th>
+            <th><strong>Problem Tools</strong></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><strong>1</strong></td>
+            <td><strong><label for="AnanyaB" class="clickable-row">Real-time Traffic Monitoring</label></strong></td>
+            <td>Collect, process, and analyze real-time traffic data using IoT devices and sensors.</td>
+            <td>Ananya B P</td>
+            <td>Arrays, Hashing, Sparse Table</td>
+        </tr>
+        <tr>
+            <td><strong>2</strong></td>
+            <td><strong><label for="Ria" class="clickable-row">Citizen Feedback Processing</label></strong></td>
+            <td>Collect, analyze, and act on citizen feedback regarding traffic issues.</td>
+            <td>Ria</td>
+            <td>Brute Force, String Search, Rabin-Karp, Lookup Table, Heap, AVL Tree, BFS, DFS, Queue</td>
+        </tr>
+        <tr>
+            <td><strong>3</strong></td>
+            <td><strong><label for="Sanjana" class="clickable-row">Smart Traffic Signal Control</label></strong></td>
+            <td>Dynamically adjust signal timings based on traffic flow and congestion.</td>
+            <td>Sanjana</td>
+            <td>Binary Search Tree, Trie, Queue</td>
+        </tr>
+        <tr>
+            <td><strong>4</strong></td>
+            <td><strong><label for="Chinmayi" class="clickable-row">Smart Parking Systems</label></strong></td>
+            <td>Use Trie to store and search for parking space availability in real-time, providing instant updates.</td>
+            <td>Chinmayi KB</td>
+            <td>Trie, Tree, BFS, DFS, Queue</td>
+        </tr>
+        <tr>
+            <td><strong>5</strong></td>
+            <td><strong><label for="RiaAndSanjana" class="clickable-row">Emergency Vehicle Routing</label></strong></td>
+            <td>Implement a 2-3 Tree to handle route optimization for emergency vehicles, ensuring minimal delay.</td>
+            <td>Ria and Sanjana</td>
+            <td>2-3 Tree, Dijkstra's Algorithm</td>
+        </tr>
+        <tr>
+            <td><strong>6</strong></td>
+            <td><strong><label for="AnanyaAndChinmayi" class="clickable-row">EV Charging Station Management</label></strong></td>
+            <td>Locate and manage EV charging stations in the city.</td>
+            <td>Ananya and Chinmayi</td>
+            <td>Binary Search Tree, Trie, Arrays</td>
+        </tr>
+    </tbody>
+</table>
 
 <!-- Industrial Strategy Sections -->
 <input type="checkbox" id="AnanyaB" class="toggle-section" hidden>
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya B P</h2>
     <ul>
-        <li><strong>a. Goal (SDG_GOAL):* Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable. </li> 
- <li><strong>b. Target (SDG_TARGET):* Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
- <li><strong>c. Indicator (SDG_INDICATOR):* Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</strong></li>
+        <li><strong>a. Goal (SDG_GOAL):*</strong> Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li> 
+        <li><strong>b. Target (SDG_TARGET):*</strong> Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
+        <li><strong>c. Indicator (SDG_INDICATOR):*</strong> Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</li>
     </ul>
 </section>
 
@@ -177,10 +177,12 @@
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES for Ananya and Chinmayi</h2>
     <ul>
-        <li><strong>a. Goal (SDG_GOAL):* Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable. </li> 
- <li><strong>b. Target (SDG_TARGET):* Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
- <li><strong>c. Indicator (SDG_INDICATOR):* Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</strong></li>
+        <li><strong>a. Goal (SDG_GOAL):*</strong> Goal 11: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li> 
+        <li><strong>b. Target (SDG_TARGET):*</strong> Target 11.2: By 2030, provide access to safe, affordable, accessible, and sustainable transport systems for all, improving road safety, notably by expanding public transport.</li>  
+        <li><strong>c. Indicator (SDG_INDICATOR):*</strong> Indicator 11.2.1: Proportion of population that has convenient access to public transport, by sex, age, and persons with disabilities.</li>
     </ul>
+</section>
+
 </section>
 </section>
     <!-- Education Details Section -->
